2010-04-27  David Bateman  <dbateman@free.fr>

	* plot/private/__errplot__.m: Update the marker in a seperate
	listener function.

2010-04-27  Rik <octave@nomad.inbox5.com>

	* plot/private/__go_draw_axes__.m: Use "." for marker when plotting
	with errorbars.  (bug #29057)

2010-04-27  Ben Abbott <bpabbott@mac.com>

	* plot/private/__errplot__.m: Add missing semicolon line terminations.

2010-04-27  David Bateman  <dbateman@free.fr>

	* plot/private/__default_plot_options_.m: New option errorstyle.
	* plot/private/__pltopt__.m: Use errorstyle here seperately from
	the linestyle so that both can be set.
	* plot/private/__errcomm__.m: Allow for the fact that matrices
	to __errplot__ with return a vector of handles.
	* plot/private/__errplot__.m: Allow for default linestyles.

	* plot/private/__errplot__.m: Set the errorbar marker to "none".

2010-04-26  David Bateman  <dbateman@free.fr>

	* plot/bar.m: Document the use of the colormap for the color of
	the bars.

	* plot/private/__errplot__.m: Allow x, box and xy errorbars with
	different syntax.

	* plot/private/__errplot__.m: Allow matlab style linestyles, and
	support setting the markers.

2010-04-24  David Bateman  <dbateman@free.fr>

	* plot/private/__patch__.m: Correct order of calling setdata and
	setvertexdata.

2010-04-25  Ben Abbott <bpabbot@mac.com>

	* plot/__go_draw_figure__.m: Hidden axes may have visible children.

2010-04-24  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: Set figure color property to 'none' when printing.

2010-04-24  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Correct fill of diamond markers

2010-04-24  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Consistent placement of axes for ps vs
	other gnuplot terminals.

2010-04-23  Ben Abbott <bpabbott@mac.com>

	* plot/colorbar.m: Fix colorbar() bugs for manual plotboxaspectratio.
	* plot/axis.m: For 'axis normal' restore plotboxaspectratio.

2010-04-23  John W. Eaton  <jwe@octave.org>
